# nanogpt

./: .env  .gitignore  FEATURE.md  README.md  README_refactored.md  alpaca_dataset.py  alpaca_sample.json  chat.py  debug.txt  debug_model.py  download_alpaca.py  eval.py  evaluation_benchmarks.py  evaluation_details.txt  evaluation_results.json  finetune.py  finetune.sh  finetune_alpaca.py  install.md  medium_org.py  model.py  pre_fp8.py  pretraining.py  pyproject.toml  run.sh  sbatch.sh  smart_batching.py  train_gpt.py  train_gpt_medium.py  vibe_test.py
data/: cached_finewebedu10B.py
lab_report/: main.tex  outline.md  references.bib
records/011325_Fp8LmHead/: c51969c2-d04c-40a7-bcea-c092c3c2d11a.py
records/030625_GPT2MediumLongerCooldown/: 779c041a-2a37-45d2-a18b-ec0f223c2bb7.py
